--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,43 +7,46 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-axum = { version = "0.7", optional = true, features = ["macros"]}
+axum = { version = "0.7", optional = true, features = ["macros", "http2"]}
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.4", optional = true, features = ["util"] }
-tower-http = { version = "0.5", features = ["fs"], optional = true }
+tower-http = { version = "0.5", features = ["fs", "compression-full"], optional = true }
 sqlx = { version = "0.8", optional = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
 bigdecimal = { version = "0.4", optional = true }
-riven = { version = "2.56.0", optional = true }
+riven = { git = "https://github.com/gqsnt/RivenBrokengg", optional = true }
 reqwest = { version = "0.12", optional = true, features = ["json", "rustls-tls"] }
 dotenv = { version = "0.15", optional = true }
 unzip-n = { version = "0.1", optional = true }
 futures = { version = "0.3", optional = true }
 chrono = { version = "0.4", optional = true }
+tracing = { version = "0.1", optional = true }
+webp = { version = "0.3", optional = true }
+image = { version = "0.25", optional = true }
+memory-serve = {version = "0.6.0", optional = true}
 
+
+leptos = { version = "0.7.0-rc0", features = ["nightly"] }
+leptos_axum = { version = "0.7.0-rc0", optional = true}
+leptos_meta = { version = "0.7.0-rc0" }
+leptos_router = { version = "0.7.0-rc0", features = ["nightly"] }
+
+wasm-bindgen = "=0.2.93"
+once_cell = "1.20.2"
+itertools = "0.13.0"
 urlencoding = "2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.132"
 thiserror = "1"
 http = "1"
-
 console_error_panic_hook = "0.1"
-
-
-leptos = { version = "0.6", features = ["nightly"] }
-leptos_axum = { version = "0.6", optional = true }
-leptos_meta = { version = "0.6", features = ["nightly"] }
-leptos_router = { version = "0.6", features = ["nightly"] }
-
-tracing = { version = "0.1", optional = true }
-
-wasm-bindgen = "=0.2.93"
-once_cell = "1.20.2"
-itertools = "0.13.0"
-
-
+reactive_stores = "0.1.0-rc0"
+strum_macros = "0.26"
+strum = "0.26"
+num_enum_derive = "0.7.3"
+num_enum = "0.7.3"
 
 [features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+hydrate = ["leptos/hydrate"]
 ssr = [
     "dep:axum",
     "dep:tokio",
@@ -62,7 +65,14 @@ ssr = [
     "dep:futures",
     "dep:chrono",
     "dep:bigdecimal",
+    "dep:webp",
+    "dep:image",
+    "dep:memory-serve",
 ]
+
+[profile.release]
+panic = "abort"
+
 
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
@@ -71,6 +81,9 @@ opt-level = 'z'
 lto = true
 codegen-units = 1
 panic = "abort"
+
+
+
 
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
