--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+cargo-features = ["profile-rustflags"]
 [package]
 name = "leptos-broken-gg"
 version = "0.1.0"
@@ -35,7 +36,7 @@ once_cell = "1.20.2"
 itertools = "0.13.0"
 urlencoding = "2"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.132"
+serde_json = { version = "1.0.132" , features = ["raw_value"]}
 thiserror = "1"
 http = "1"
 console_error_panic_hook = "0.1"
@@ -72,6 +73,9 @@ ssr = [
 
 [profile.release]
 panic = "abort"
+
+[profile.dev]
+rustflags = ["-Awarnings"]
 
 
 # Defines a size-optimized profile for the WASM bundle in release mode
