--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,4 +4,4 @@ build-std-features = ["panic_immediate_abort"]
 
 [build]
 target = "x86_64-unknown-linux-gnu"
-rustflags = ["--cfg=has_std", "-Ctarget-cpu=native"]
+rustflags = ["--cfg=has_std", "-Cpanic=abort"]
