--- a/.release-cargo/config.toml
+++ b/.release-cargo/config.toml
@@ -3,5 +3,5 @@ build-std = ["std", "panic_abort", "core", "alloc"]
 build-std-features = ["panic_immediate_abort"]
 
 [build]
-target = "x86_64-unknown-linux-musl"
-rustflags = ["--cfg=has_std", "-Cpanic=abort"]
+target = "x86_64-unknown-linux-gnu"
+rustflags = ["--cfg=has_std", "-Cpanic=abort", "-Ctarget-cpu=native"]
