--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 axum = { version = "0.7", optional = true, features = ["macros", "http2"]}
+rustls-acme = { version = "0.11.1", optional = true, features = ["axum"] }
+axum-server = { version = "0.7", optional = true }
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.4", optional = true, features = ["util"] }
 tower-http = { version = "0.5", features = ["fs", "compression-full"], optional = true }
@@ -23,7 +25,6 @@ chrono = { version = "0.4", optional = true }
 tracing = { version = "0.1", optional = true }
 webp = { version = "0.3", optional = true }
 image = { version = "0.25", optional = true }
-memory-serve = {version = "0.6.0", optional = true}
 
 
 leptos = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", features = ["nightly"] }
@@ -43,6 +44,7 @@ strum_macros = "0.26"
 strum = "0.26"
 num_enum_derive = "0.7.3"
 num_enum = "0.7.3"
+
 
 [features]
 hydrate = ["leptos/hydrate"]
@@ -66,7 +68,8 @@ ssr = [
     "dep:bigdecimal",
     "dep:webp",
     "dep:image",
-    "dep:memory-serve",
+    "dep:rustls-acme",
+    "dep:axum-server",
 ]
 
 [profile.release]
@@ -108,7 +111,7 @@ tailwind-config-file = "tailwind.config.js"
 assets-dir = "public"
 
 # The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
-site-addr = "127.0.0.1:3000"
+site-addr = "0.0.0.0:8080"
 
 # The port to use for automatic reload monitoring
 reload-port = 3001
