--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ chrono = { version = "0.4", optional = true }
 tracing = { version = "0.1", optional = true }
 webp = { version = "0.3", optional = true }
 image = { version = "0.25", optional = true }
+memory-serve = { version = "0.6.0", optional = true }
 
 
 leptos = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", features = ["nightly"] }
@@ -70,6 +71,7 @@ ssr = [
     "dep:image",
     "dep:rustls-acme",
     "dep:axum-server",
+    "dep:memory-serve",
 ]
 
 [profile.release]
