--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,14 @@ image = { version = "0.25", optional = true }
 memory-serve = { version = "0.6.0", optional = true }
 
 
+
 leptos = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", features = ["nightly"] }
 leptos_axum = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", optional = true}
 leptos_meta = { git  = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git" }
 leptos_router = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", features = ["nightly"] }
+
+reactive_stores = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git" }
+reactive_stores_macro = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git" }
 
 wasm-bindgen = "=0.2.93"
 itertools = "0.13.0"
