--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,13 +30,13 @@ memory-serve = { version = "0.6.0", optional = true }
 
 
 
-leptos = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", features = ["nightly"] }
-leptos_axum = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", optional = true}
-leptos_meta = { git  = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git" }
-leptos_router = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git", features = ["nightly"] }
+leptos = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93",rev="13ccb1f" ,features = ["nightly"] }
+leptos_axum = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93",rev="13ccb1f", optional = true}
+leptos_meta = { git  = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93" ,rev="13ccb1f"}
+leptos_router = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93",rev="13ccb1f" ,features = ["nightly"] }
 
-reactive_stores = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git" }
-reactive_stores_macro = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93.git" }
+reactive_stores = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93" ,rev="13ccb1f"}
+reactive_stores_macro = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93", rev="13ccb1f"}
 
 wasm-bindgen = "=0.2.93"
 itertools = "0.13.0"
