--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,15 +29,15 @@ dashmap = {version = "6.1.0", optional = true}
 
 
 
-leptos = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93",rev="13ccb1f" ,features = ["nightly"] }
-leptos_axum = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93",rev="13ccb1f", optional = true}
-leptos_meta = { git  = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93" ,rev="13ccb1f"}
-leptos_router = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93",rev="13ccb1f" ,features = ["nightly"] }
+leptos = { version = "0.7.0-rc1" ,features = ["nightly"] }
+leptos_axum = { version = "0.7.0-rc1", optional = true}
+leptos_meta ={ version = "0.7.0-rc1"}
+leptos_router = { version = "0.7.0-rc1" ,features = ["nightly"] }
 
-reactive_stores = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93" ,rev="13ccb1f"}
-reactive_stores_macro = { git = "https://github.com/gqsnt/leptos_rc0_wasm0_2_93", rev="13ccb1f"}
+reactive_stores ={version = "0.1.0-rc1"}
+reactive_stores_macro = { version = "0.1.0-rc1"}
 
-wasm-bindgen = "=0.2.93"
+wasm-bindgen = "=0.2.95"
 itertools = "0.13.0"
 urlencoding = "2"
 serde = { version = "1.0", features = ["derive"] }
