--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ ravif = { version = "0.11.11", optional = true }
 rgb = { version = "0.8.50", optional = true }
 memory-serve = { version = "0.6.0", optional = true }
 dashmap = {version = "6.1.0", optional = true}
+sitemap = {version = "0.4.1", optional = true}
 
 
 
@@ -76,6 +77,7 @@ ssr = [
     "dep:image",
     "dep:memory-serve",
     "dep:dashmap",
+    "dep:sitemap",
 ]
 
 [profile.release]
