--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=
+DATABASE_URL=postgres://postgres:password@localhost/broken_gg
 RIOT_API_KEY=
 MAX_PG_CONNECTIONS=10
 MAX_MATCHES=1000
