--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ dashmap = {version = "6.1.0", optional = true}
 sitemap = {version = "0.4.1", optional = true}
 thiserror = {version = "2", optional = true}
 serde_json = {version = "1.0.132", optional = true}
+axum-server = {version = "0.7.1", optional = true, features = ["tls-rustls"]}
 
 
 
@@ -75,6 +76,7 @@ ssr = [
     "dep:sitemap",
     "dep:thiserror",
     "dep:serde_json",
+    "dep:axum-server"
 ]
 
 [profile.release]
