--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-DATABASE_URL=postgres://postgres:password@localhost/broken_gg
 RIOT_API_KEY=
 MAX_PG_CONNECTIONS=10
 MAX_MATCHES=1500
 MATCH_TASK_UPDATE_INTERVAL=2
 # DEV - PROD
 ENV=DEV
+
+DB_USER_NAME=postgres
+DB_PASSWORD=password
+DB_NAME=broken_gg
+DB_SOCKET=/run/postgresql
