optimize /refactor db / queries

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,18 @@
 RIOT_API_KEY=
+
+# 10-100
 MAX_PG_CONNECTIONS=10
 MAX_MATCHES=1500
-MATCH_TASK_UPDATE_INTERVAL=2
-# DEV - PROD
-ENV=DEV
 
+# 1-5
+MATCH_TASK_UPDATE_INTERVAL=2
+# DEV - PROD => Prod: update pro 2am + sitemap 3am schedule task
+ENV=DEV
 DB_USER_NAME=postgres
 DB_PASSWORD=password
 DB_NAME=broken_gg
+# direct socket for best performance
 DB_SOCKET=/run/postgresql
+#auto migrate will use this
+DATABASE_URL=postgresql://postgres:password@localhost:5432/broken_gg
+LEPTOS_WASM_OPT_VERSION=version_119
