--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,27 +27,26 @@ memory-serve = { version = "0.6.0", optional = true }
 dashmap = {version = "6.1.0", optional = true}
 sitemap = {version = "0.4.1", optional = true}
 thiserror = {version = "2", optional = true}
-serde_json = {version = "1.0.132", optional = true}
+serde={version = "1", features = ["derive"], optional = true}
+
+serde_json = {version = "1", optional = true}
 axum-server = {version = "0.7.1", optional = true, features = ["tls-rustls"]}
 rustls = { version = "0.23.16" , features = ["ring"], optional = true}
 
-
-leptos = { version = "0.7.0-rc1" ,features = ["nightly"] }
-
-leptos_axum = { version = "0.7.0-rc1", optional = true}
-leptos_meta ={ version = "0.7.0-rc1"}
-leptos_router = { version = "0.7.0-rc1" ,features = ["nightly"] }
-
-reactive_stores ={version = "0.1.0-rc1"}
-reactive_stores_macro = { version = "0.1.0-rc1"}
+leptos = { git="https://github.com/gqsnt/leptos_codee_2_1", rev = "7bceaf77bbe6e083820f8fa5b32db8092cf18fe1" ,features = ["nightly", "rkyv"] }
+leptos_server = { git="https://github.com/gqsnt/leptos_codee_2_1", rev = "7bceaf77bbe6e083820f8fa5b32db8092cf18fe1" ,features = ["rkyv"] }
+leptos_axum = { git="https://github.com/gqsnt/leptos_codee_2_1", rev = "7bceaf77bbe6e083820f8fa5b32db8092cf18fe1", optional = true}
+leptos_meta ={ git="https://github.com/gqsnt/leptos_codee_2_1", rev = "7bceaf77bbe6e083820f8fa5b32db8092cf18fe1"}
+leptos_router = { git="https://github.com/gqsnt/leptos_codee_2_1", rev = "7bceaf77bbe6e083820f8fa5b32db8092cf18fe1" ,features = ["nightly"] }
+reactive_stores ={git="https://github.com/gqsnt/leptos_codee_2_1", rev = "7bceaf77bbe6e083820f8fa5b32db8092cf18fe1"}
+reactive_stores_macro = {git="https://github.com/gqsnt/leptos_codee_2_1", rev = "7bceaf77bbe6e083820f8fa5b32db8092cf18fe1"}
 
 wasm-bindgen = "=0.2.95"
 itertools = "0.13.0"
 urlencoding = "2"
-serde = {version = "1.0", features = ["derive"]}
 http = "1"
 console_error_panic_hook = "0.1"
-
+rkyv = "0.8.8"
 
 
 [features]
@@ -76,9 +75,10 @@ ssr = [
     "dep:dashmap",
     "dep:sitemap",
     "dep:thiserror",
-    "dep:serde_json",
     "dep:axum-server",
-    "dep:rustls"
+    "dep:rustls",
+    "dep:serde_json",
+    "dep:serde",
 ]
 
 [profile.release]
