done fix rebuild some css, remove unwanted gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 broken-gg/node_modules/
 broken-gg/package-lock.json
 broken-gg/end2end/package-lock.json
+broken-gg/end2end/node_modules/
 broken-gg/test-results/
 broken-gg/end2end/playwright-report/
 broken-gg/playwright/.cache/
