allow to run pro_player_task on startup using .env allow to run site_map_task on startup using .env

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ MAX_MATCHES=1500
 
 # 1-5
 MATCH_TASK_UPDATE_INTERVAL=2
+LOL_PRO_TASK_ON_STARTUP=true
+SITE_MAP_TASK_ON_STARTUP=true
+
 # DEV - PROD => Prod: update pro 2am + sitemap 3am schedule task
 ENV=DEV
 DB_USER_NAME=postgres
