--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,5 +3,4 @@ build-std = ["std", "panic_abort", "core", "alloc"]
 build-std-features = ["panic_immediate_abort"]
 
 [build]
-target = "x86_64-unknown-linux-gnu"
-rustflags = ["--cfg=has_std"]
+rustflags = ["--cfg=has_std", "-Cpanic=abort"]
