brand switch broken-gg to ruche behive well

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ SITE_MAP_TASK_ON_STARTUP=true
 ENV=DEV
 DB_USER_NAME=postgres
 DB_PASSWORD=password
-DB_NAME=broken_gg
+DB_NAME=ruche
 # direct socket for best performance
 DB_SOCKET=/run/postgresql
 #auto migrate will use this
-DATABASE_URL=postgresql://postgres:password@localhost:5432/broken_gg
+DATABASE_URL=postgresql://postgres:password@localhost:5432/ruche
