switch to acme rustls

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,17 @@ SITE_MAP_TASK_ON_STARTUP=true
 
 # DEV - PROD => Prod: update pro 2am + sitemap 3am schedule task
 ENV=DEV
+
+# direct socket db connection
 DB_USER_NAME=postgres
 DB_PASSWORD=password
 DB_NAME=ruche
-# direct socket for best performance
 DB_SOCKET=/run/postgresql
-#auto migrate will use this
+
+
+# auto migrate will use this
 DATABASE_URL=postgresql://postgres:password@localhost:5432/ruche
+
+# PROD HTTPS CONFIG
+LETS_ENCRYPT_DNS_NAME=ruche.lol
+LETS_ENCRYPT_EMAIL=
