--- a/ruche/Cargo.toml
+++ b/ruche/Cargo.toml
@@ -30,6 +30,7 @@ async-stream = { version = "0.3.6", optional = true }
 serde_json = {version = "1", optional = true}
 axum-server = {version = "0.7.1", optional = true, features = ["tls-rustls"]}
 rustls = { version = "0.23.16" , features = ["ring"], optional = true}
+rustls-acme = { version = "0.12.1", features = ["axum"] , optional = true}
 
 leptos = { git="https://github.com/gqsnt/leptos_codee_rkyv_8"  ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1",features = ["nightly", "rkyv"] }
 leptos_axum = { git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1", optional = true}
@@ -78,7 +79,8 @@ ssr = [
     "dep:serde_json",
     "dep:serde",
     "dep:async-stream",
-    "common/ssr"
+    "common/ssr",
+    "dep:rustls-acme",
 ]
 
 
