--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ DB_NAME=ruche
 DB_SOCKET=/run/postgresql
 #auto migrate will use this
 DATABASE_URL=postgresql://postgres:password@localhost:5432/ruche
+
+#let's encrypt path
+LETS_ENCRYPT_PATH=/etc/letsencrypt/live/ruche.lol
