--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ resolver = "2"
 
 
 [workspace.dependencies]
-rkyv = "0.8"
+bitcode="0.6"
 riven = {git = "https://github.com/gqsnt/RivenBrokengg"}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
