--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rkyv = {workspace = true}
+bitcode={workspace = true}
 riven={workspace = true, optional = true}
 serde={workspace = true, optional = true}
 
