--- a/ruche/Cargo.toml
+++ b/ruche/Cargo.toml
@@ -32,13 +32,13 @@ serde_json = {version = "1", optional = true}
 axum-server = {version = "0.7.1", optional = true, features = ["tls-rustls"]}
 rustls = { version = "0.23.16" , features = ["ring"], optional = true}
 
-leptos = { git="https://github.com/gqsnt/leptos_codee_rkyv_8"  ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1",features = ["nightly", "rkyv"] }
-leptos_axum = { git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1", optional = true}
-leptos_meta ={ git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1"}
-leptos_router = { git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1" ,features = ["nightly"] }
-reactive_stores ={git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1"}
-reactive_stores_macro = {git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="2a40374a0e8394cf79fcefbb801a88f2117771f1"}
-rkyv = {workspace = true}
+leptos = { git="https://github.com/gqsnt/leptos_codee_rkyv_8"  ,rev="178cae690cbd0e2721ef05eb7d94a80ce67c1bad",features = ["nightly", "bitcode", "rkyv"] }
+leptos_axum = { git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="178cae690cbd0e2721ef05eb7d94a80ce67c1bad", optional = true}
+leptos_meta ={ git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="178cae690cbd0e2721ef05eb7d94a80ce67c1bad"}
+leptos_router = { git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="178cae690cbd0e2721ef05eb7d94a80ce67c1bad" ,features = ["nightly"] }
+reactive_stores ={git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="178cae690cbd0e2721ef05eb7d94a80ce67c1bad"}
+reactive_stores_macro = {git="https://github.com/gqsnt/leptos_codee_rkyv_8" ,rev="178cae690cbd0e2721ef05eb7d94a80ce67c1bad"}
+bitcode = {workspace = true}
 wasm-bindgen = "=0.2.97"
 itertools = "0.13.0"
 urlencoding = "2"
