add 'in live game' indicator: live nav become green, controlled by sse event auto update live game every LIVE_GAME_CACHE_UPDATE_INTERVAL seconds (.env.example) refresh btn on live game tab bypass cache and force refresh from riot api readme not up to date

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ MAX_MATCHES=1500
 
 # 1-5
 MATCH_TASK_UPDATE_INTERVAL=2
+LIVE_GAME_CACHE_UPDATE_INTERVAL=30
 LOL_PRO_TASK_ON_STARTUP=true
 SITE_MAP_TASK_ON_STARTUP=true
 
