--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ resolver = "2"
 
 [workspace.dependencies]
 bitcode="0.6"
-riven = {git = "https://github.com/gqsnt/RivenBrokengg"}
+riven = {version = "2.61"}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
