switch to leptos 8.2 bincode switch to tailwind 4 add new map

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bitcode={workspace = true}
 riven={workspace = true, optional = true}
-serde={workspace = true, optional = true}
+serde={workspace = true}
 
 
 [features]
-ssr=["dep:riven", "dep:serde"]
+ssr=["dep:riven"]
