--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,2 @@
-[unstable]
-build-std = ["std", "panic_abort", "core", "alloc"]
-build-std-features = ["panic_immediate_abort"]
-
 [build]
-rustflags = ["--cfg=has_std", "-Cpanic=abort"]
+rustflags = ["--cfg", "erase_components"]
