--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
-#cargo-features = ["profile-rustflags"]
+cargo-features = ["profile-rustflags"]
 [workspace]
 members = ["common", "asset-generation", "ruche"]
 resolver = "2"
 
 
 [workspace.dependencies]
-bitcode="0.6"
-riven = {git="https://github.com/gqsnt/RivenBrokengg"}
+riven = {version = "2.68.0"}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
@@ -20,13 +19,13 @@ clap= { version = "4", features = ["derive"] }
 panic = "abort"
 lto = true
 codegen-units = 1
-#rustflags=["-Ctarget-cpu=native"]
+rustflags = ["--cfg", "erase_components"]
 
 
 [profile.wasm-release]
 inherits = "release"
-opt-level = 'z'
-lto = true
+opt-level = 3
+lto = 'fat'
 codegen-units = 1
 panic = "abort"
-#rustflags=["-Zfmt-debug=none", "-Zlocation-detail=none"]
+rustflags = ["-Ctarget-cpu=native", "--cfg", "erase_components"]
