--- a/ruche/.gitignore
+++ b/ruche/.gitignore
@@ -1,7 +1,7 @@
-ruche/public/sitemap.xml
-ruche/public/assets/profile_icons
-ruche/public/assets/champions.avif
-ruche/public/assets/logo.avif
-ruche/public/assets/items.avif
-ruche/public/assets/perks.avif
-ruche/public/assets/summoner_spells.avif
+public/sitemap.xml
+public/assets/profile_icons
+public/assets/champions.avif
+public/assets/logo.avif
+public/assets/items.avif
+public/assets/perks.avif
+public/assets/summoner_spells.avif
