--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ resolver = "2"
 
 
 [workspace.dependencies]
-riven = {version = "2.72.0"}
-serde = {version = "1", features = ["derive"]}
-serde_json = "1"
-tokio = { version = "1", features = ["rt-multi-thread"] }
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
-thiserror = "2"
+riven = {git="https://github.com/gqsnt/Riven", rev="78e2300b6966c6dca293292d820e1d165a009ead"}
+serde = {version = "1.0.228", features = ["derive"]}
+serde_json = "1.0.143"
+tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
+reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
+thiserror = "2.0.17"
 futures = "0.3.31"
 clap= { version = "4", features = ["derive"] }
 
